# tari_payment_server

./: .dockerignore  .env  .env.sample  .env.test  .gitignore  Cargo.toml  INSTALLATION.md  LICENSE  README.md  SHOPIFY_INTEGRATION.md  WALLET_INTEGRATION.md  lints.toml  rustfmt.toml
e2e/: Cargo.toml
e2e/src/: helpers.rs
e2e/tests/: e2e_tests.rs
e2e/tests/cucumber/: mod.rs  setup.rs  steps.rs  world.rs
e2e/tests/features/: accounts.feature  admin_endpoints.feature  attach_order_to_address.feature  auth.feature  authorization.feature  claim_order.feature  credit_note.feature  creditors.feature  expiry.feature  full_accounts.feature  order_cancellation.feature  order_matching_with_name.feature  order_matching_with_raw_memo.feature  order_payment_matching.feature  order_payment_matching_with_other_prices.feature  order_payment_matching_with_strict_mode_off.feature  order_reset.feature  order_search.feature  order_webhook_auth.feature  orders.feature  payment_flow.feature  payment_history.feature  payment_override.feature  reassign_order.feature  settle_accounts.feature  unfulfilled_orders.feature  update_memo.feature  update_price.feature  wallet_auth.feature  wallet_management.feature  wallet_whitelist_disable.feature  whitelist.feature
e2e/tests/fixtures/: customers.json  orders.json
e2e/tests/ignored_features/: accounts.feature  authorization.feature  creditors.feature  order_cancellation.feature  order_payment_matching.feature  order_search.feature  order_webhook_auth.feature  payments.feature.todo  unfulfilled_orders.feature  wallet_auth.feature
shopify_tools/: Cargo.toml
shopify_tools/src/: api.rs  config.rs  data_objects.rs  error.rs  helpers.rs  lib.rs  shopify_order.rs  shopify_product.rs  shopify_transaction.rs
shopify_tools/src/test_assets/: actual_order2.json  checkout_create.json  order_transactions_create.json  transaction1.json
shopify_tools/theme/assets/: icons.eot  icons.json  tari.css  theme.js  theme.js.liquid  theme.scss  theme.scss.liquid  vendor.js
shopify_tools/theme/config/: settings_data.json  settings_schema.json
shopify_tools/theme/layout/: gift_card.liquid  password.liquid  theme.liquid
shopify_tools/theme/locales/: cs.json  da.json  de.json  en.default.json  es.json  fi.json  fr.json  hi.json  it.json  ja.json  ko.json  ms.json  nb.json  nl.json  pl.json  pt-BR.json  pt-PT.json  sv.json  th.json  tr.json  zh-CN.json  zh-TW.json
shopify_tools/theme/sections/: advanced-content.liquid  article-template.liquid  collection-list-template.liquid  collection-list.liquid  collection-rows.liquid  collection-template.liquid  featured-blog.liquid  featured-content.liquid  featured-product.liquid  footer.liquid  header.liquid  image-with-text.liquid  list-collections-template.liquid  map.liquid  newsletter.liquid  password-content.liquid  password-header.liquid  product-template.liquid  search-template.liquid  slideshow.liquid  video.liquid
shopify_tools/theme/snippets/: advanced-tag-loop.liquid  ajax-cart-template.liquid  better-open-graph-tags-open-graph-tags.liquid  blog-sidebar.liquid  breadcrumb.liquid  collection-list-item.liquid  collection-sidebar.liquid  collection-sorting.liquid  collection-views.liquid  comment.liquid  date.liquid  featured-blog.liquid  featured-collection.liquid  image-logic.liquid  minmaxify-head.liquid  mobile-nav.liquid  newsletter-form.liquid  price-sale.liquid  price.liquid  product-grid-item.liquid  product-list-item.liquid  product-unit-price.liquid  related-products.liquid  search-bar.liquid  search-result-grid.liquid  search-result.liquid  site-nav.liquid  social-meta-tags.liquid  social-sharing.liquid  svg-definitions.liquid
shopify_tools/theme/templates/: 404.liquid  blog.liquid  cart.liquid  gift_card.liquid  page.contact.liquid  page.list-collections.liquid  product.liquid
tari_payment_engine/: Cargo.toml
tari_payment_engine/cov_raw/: tari_payment_engine-14096682954379502315_0.profraw  tari_payment_engine-15975387040339204805_0.profraw  tari_payment_engine-16592046976780596283_0.profraw  tari_payment_engine-459135412305629841_0.profraw  tari_payment_engine-6037611902679357882_0.profraw
tari_payment_engine/examples/: memo_signature.rs
tari_payment_engine/src/: address_extractor.rs  db_types.rs  events.rs  lib.rs  shopify_types.rs
tari_payment_engine/src/db/: common.rs  mod.rs
tari_payment_engine/src/events/: channel.rs  event_types.rs  hooks.rs  mod.rs
tari_payment_engine/src/helpers/: address_extractor.rs  gumbo.rs  memo_signature.rs  mod.rs  wallet_signature.rs
tari_payment_engine/src/order_manager/: accounts_api.rs  api.rs  auth_api.rs  errors.rs  mod.rs  orders_api.rs
tari_payment_engine/src/sqlite/: mod.rs  sqlite_impl.rs
tari_payment_engine/src/test_utils/: prepare_env.rs
tari_payment_engine/src/tpe_api/: account_objects.rs  accounts_api.rs  auth_api.rs  errors.rs  exchange_objects.rs  exchange_rate_api.rs  mod.rs  order_flow_api.rs  order_objects.rs  payment_objects.rs  shopify_tracker_api.rs  wallet_api.rs
tari_payment_engine/src/traits/: account_management.rs  auth_management.rs  data_objects.rs  exchange_rates.rs  mod.rs  payment_gateway_database.rs  shopify.rs  wallet_management.rs
tari_payment_engine/tests/: burst_orders.rs  burst_transfers.rs  cucumber_tests.rs  hooks.rs  order_flow.rs
tari_payment_engine/tests/cucumber/: mod.rs  setups.rs  shopify_world.rs  steps.rs
tari_payment_engine/tests/features/: auth.feature  payments.feature
tari_payment_server/: Cargo.toml
tari_payment_server/examples/: memo_signature.rs
tari_payment_server/src/: auth.rs  cli-help.txt  cli.rs  config.rs  data_objects.rs  errors.rs  expiry_worker.rs  helpers.rs  lib.rs  main.rs  memo_signature.rs  new_order.rs  routes.rs  server.rs  shopify_order.rs  shopify_routes.rs  test.rs
taritools/: Cargo.toml  README.md
taritools/scripts/: tps_notify.sh
taritools/src/: interactive.rs  jwt_token.rs  keys.rs  main.rs  memo.rs  payments.rs  profile_manager.rs  setup.rs  wallet.rs
tpg_common/: Cargo.toml
tpg_common/src/: helpers.rs  lib.rs  microtari.rs  op.rs  secret.rs
(+132 files in other folders)
