[package]
name = "e2e"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
tari_common_types = "1.0.0-pre.10"
shopify_tools = { version = "0.2.2", path = "../shopify_tools" }
tari_payment_engine = { version = "0.2.2", path = "../tari_payment_engine", features = ["test_utils"] }
tari_payment_server = { version = "0.2.2", path = "../tari_payment_server" }
tpg_common = { version = "0.2.2", path = "../tpg_common" }
tari-jwt = {  version = "0.1.0", git = "https://github.com/tari-project/tari-jwt.git", branch = "main" }
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["json"] }
serde_json = "1.0.115"

[dev-dependencies]
actix-web = "4.0.0-beta.8"
chrono = "0.4.37"
dotenvy = "0.15.0"
env_logger = "0.11.3"
cucumber = { version = "0.20", features = ["libtest"] }
futures-util = "0.3.30"
once_cell = "1.19.0"
tokio = { version = "1.20.1", features = ["full"] }


[[test]]
name = "e2e_tests" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
