[package]
name = "shopify_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tpg_common = { version = "0.1.0", path = "../tpg_common" }
chrono = "0.4.38"
graphql-parser = "0.4.0"
log = "0.4.21"
rand = "0.9.0-alpha.1"
reqwest = {  version = "0.12.5", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.61"

