[package]
name = "tari_payment_engine"
version = "0.1.0"
edition = "2021"
description = "Database backend for Tari payment gateway"

[dependencies]
tpg_common = { version = "0.1.0", path = "../tpg_common" }
blake2 = "0.10.6"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = {  version = "0.15.0", optional = true }
env_logger = {  version = "0.11.3", optional = true }
futures-util = "0.3.30"
log = "0.4.17"
rand = {  version = "0.8.5" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "chrono"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
regex = "1.10.3"
tari_common = "1.0.0-rc.5"
tari_common_types = "1.0.0-pre.10"
tari_crypto = { version = "0.20.1", default-features = false }

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
libtest = ["cucumber/libtest"]
test_utils = ["dotenvy", "env_logger"]
test_features = ["sqlite", "test_utils"]

[dev-dependencies]
cucumber = { version = "0.20", features = ["libtest"] }
dotenvy = "0.15.0"
futures-util = "0.3.30"
once_cell = "1.19.0"# allows Cucumber to print output instead of libtest

