[package]
name = "tari_payment_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tpg_common = { version = "0.1.0", path = "../tpg_common" }
tari_payment_engine = { version = "0.1.0", path = "../tari_payment_engine" }

actix-web = "4.0.0-beta.8"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.0"
env_logger = "0.11.3"
log = "0.4.17"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
