[package]
name = "tari_payment_server"
version = "1.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["shopify"]
shopify = ["shopify_tools"]



[dependencies]
shopify_tools = { version = "1.10.0", path = "../shopify_tools", optional = true }
tpg_common = { version = "1.10.0", path = "../tpg_common" }
tari_payment_engine = { version = "1.10.0", path = "../tari_payment_engine" }

actix-jwt-auth-middleware = { version = "0.5.0", git = "https://github.com/cjs77/actix-jwt-auth-middleware.git", branch = "master" }
actix-http = "3.8.0"
actix-web = "4.0.0-beta.8"
base64 = "0.13.1"
bytes = "1.6.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
hmac = "0.12.1"
log = "0.4.17"
paste = "1.0.14"
rand = "0.8.4"
regex = "1.10.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sha2 = "0.10.8"
tari_common_types = {version = "1.3.1-pre.1", git = "https://github.com/tari-project/tari.git", package = "tari_common_types", tag = "v1.3.1-pre.1" }
tari-jwt = {  version = "0.1.0", git = "https://github.com/tari-project/tari-jwt.git", branch = "main" }
tempfile = "3.10.1"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.81"
mockall = "0.12.1"
