[package]
name = "taritools"
version = "0.1.0"
edition = "2021"

[dependencies]
shopify_tools = { version = "0.1.0", path = "../shopify_tools" }
tari_payment_server = {version = "0.1.0", path = "../tari_payment_server"}
tari_payment_engine = {version = "0.1.0", path = "../tari_payment_engine"}
tpg_common = {version = "0.1.0", path = "../tpg_common"}

anyhow = "1.0.44"
blake2 = "0.10.6"
chrono = "0.4.19"
clap = { version = "4.5.3", features = ["derive"] }
digest = "0.10.7"
dirs = "5.0.1"
dotenvy = "0.15.0"
env_logger = "0.11.3"
dialoguer = { version = "0.11.0", default-features = false, features = ["completion", "fuzzy-select", "history", "editor"] }
indicatif = "0.17.8"
prettytable-rs = "0.10.0"
rand = "0.8.4"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
tari_crypto = "0.20.0"
tari_common = "1.0.0-rc.5"
tari_common_types = "1.0.0-rc.5"
tari-jwt = {  version = "0.1.0", git = "https://github.com/tari-project/tari-jwt.git", branch = "main" }
tari_key_manager = { version = "1.0.0-rc.8", git = "https://github.com/tari-project/tari.git", package = "tari_key_manager", branch = "nextnet" }
tokio = "1.37.0"
toml = "0.8.14"
log = "0.4.21"
futures = "0.3.30"
paste = "1.0.15"
qrcode = "0.14.1"
url = { version = "2.5.2", features = ["serde"] }
urlencoding = "2.1.3"
zeroize = "1.8.1"
