[package]
name = "taritools"
version = "1.3.0-beta"
edition = "2021"
authors = ["CjS <https://y.at/ðŸ‘ï¸ðŸ‘ƒðŸ‘ï¸>"]

[dependencies]
shopify_tools = { version = "1.3.0-beta", path = "../shopify_tools" }
tari_payment_server = { version = "1.3.0-beta", path = "../tari_payment_server"}
tari_payment_engine = { version = "1.3.0-beta", path = "../tari_payment_engine"}
tpg_common = { version = "1.3.0-beta", path = "../tpg_common"}

anyhow = "1.0.44"
blake2 = "0.10.6"
chrono = "0.4.19"
clap = { version = "4.5.3", features = ["derive"] }
digest = "0.10.7"
dirs = "5.0.1"
dotenvy = "0.15.0"
dialoguer = { version = "0.11.0", default-features = false, features = ["completion", "fuzzy-select", "history", "editor"] }
env_logger = "0.11.3"
futures = "0.3.30"
indicatif = "0.17.8"
log = "0.4.21"
paste = "1.0.15"
prettytable-rs = "0.10.0"
qrcode = "0.14.1"
rand = "0.8.4"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "chrono"] }
tari_crypto = "0.20.3"
tari_common = {version = "1.3.1-pre.1", git = "https://github.com/tari-project/tari.git", package = "tari_common", tag = "v1.3.1-pre.1" }
tari_common_types = {version = "1.3.1-pre.1", git = "https://github.com/tari-project/tari.git", package = "tari_common_types", tag = "v1.3.1-pre.1" }
tari_key_manager = { version = "1.3.1-pre.1", git = "https://github.com/tari-project/tari.git", package = "tari_key_manager", tag = "v1.3.1-pre.1" }
tari-jwt = {  version = "0.1.0", git = "https://github.com/tari-project/tari-jwt.git", branch = "main" }
tokio = "1.37.0"
toml = "0.8.14"
url = { version = "2.5.2", features = ["serde"] }
urlencoding = "2.1.3"
zeroize = "1.8.1"
regex = "1.10.5"
