[package]
name = "tpg_common"
version = "1.3.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["chrono"] }
thiserror = "1.0.61"
